--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/platform-browser-dynamic": "^5.2.11",
     "@ionic-native/core": "~4.12.0",
     "@ionic-native/social-sharing": "^4.13.0",
-    "@ionic-native/splash-screen": "~4.12.0",
+    "@ionic-native/splash-screen": "^4.12.2",
     "@ionic-native/status-bar": "~4.12.0",
     "@ionic/storage": "2.1.3",
     "cordova-android": "7.0.0",
