--- a/package.json
+++ b/package.json
@@ -21,17 +21,20 @@
     "@angular/platform-browser": "^5.2.11",
     "@angular/platform-browser-dynamic": "^5.2.11",
     "@ionic-native/core": "~4.12.0",
+    "@ionic-native/network": "^4.14.0",
     "@ionic-native/social-sharing": "^4.13.0",
     "@ionic-native/splash-screen": "^4.12.2",
     "@ionic-native/status-bar": "~4.12.0",
     "@ionic/storage": "2.1.3",
-    "cordova-android": "7.0.0",
-    "cordova-plugin-console": "^1.0.7",
+    "cordova-android": "6.3.0",
+    "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-network-information": "^2.0.1",
     "cordova-plugin-splashscreen": "^3.2.2",
-    "cordova-plugin-statusbar": "^2.1.3",
-    "cordova-plugin-whitelist": "^1.2.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-x-socialsharing": "^5.4.1",
+    "cordova-plugin-youtube-video-player": "^1.0.6",
     "es6-promise-plugin": "^4.2.2",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
@@ -53,7 +56,9 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-statusbar": {},
       "ionic-plugin-keyboard": {},
-      "cordova-plugin-x-socialsharing": {}
+      "cordova-plugin-x-socialsharing": {},
+      "cordova-plugin-network-information": {},
+      "cordova-plugin-youtube-video-player": {}
     },
     "platforms": [
       "android"
